...
        app:layout_constraintTop_toBottomOf="@+id/home_button"
        app:civ_border_width="4dp"
        app:civ_border_color="@color/medium_blue"
        tools:srcCompat="@drawable/user_default_image" />

    <Button
        android:id="@+id/edit_pfp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:backgroundTint="@color/medium_blue"
        android:text="Edit Picture"
        android:textColor="@color/off_white"
...
        android:id="@+id/public_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/dark_blue"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/change_pw_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pfp_button" />

    <Button
        android:id="@+id/change_pw_button"
...
